# Reseller-AI

./: README.md  SDD-AI-Reseller-Automation.md
backend/: pyproject.toml
backend/alembic/versions/: 156cc59acf36_add_stripe_customer_id_to_tenants.py  6854d88a1a66_add_subscription_fields_to_tenants.py  b88d3c7f0a00_add_leads_table.py
backend/app/: main.py
backend/app/core/: config.py  database.py  feature_flags.py  redis.py  security.py
backend/app/middleware/: tenant_context.py
backend/app/models/: __init__.py  lead.py  tenant.py
backend/app/routers/: auth.py  billing.py  conversations.py  facebook_oauth.py  features.py  instagram_oauth.py  leads.py  products.py  settings.py  shopify_oauth.py  webhooks.py
backend/app/schemas/: auth.py  billing.py  conversation.py  lead.py  settings.py  webhook.py
backend/app/services/: auth_service.py  billing_service.py  engagement_service.py  facebook_service.py  instagram_service.py  lead_service.py  openai_service.py  (+3 more)
backend/scripts/: seed.py  seed_stripe.py
backend/tests/: test_auth.py  test_auth_service.py  test_billing_router.py  test_billing_service.py  test_conversations_router.py  test_engagement_service.py  test_engagement_worker.py  test_facebook_oauth_router.py  test_feature_flags.py  test_features_router.py  test_instagram_service.py  test_lead_service.py  test_middleware.py  test_rag_service.py  test_redis.py  test_security.py  test_settings_router.py  test_settings_service.py  test_tenant_isolation.py  test_webhook_router.py
backend/workers/: celery_app.py  engagement_worker.py  lead_worker.py
(+39 files in other folders)
